translated all web-side to russian language

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>O'ktamxon shifo clinic</title>
+    <title>O'ktamxon shifo клиника</title>
     <link 
     rel="Icon" 
     type="image/png"
-    href="https://images.assetsdelivery.com/compings_v2/cattallina/cattallina1703/cattallina170300002.jpg">
+    href="/src/assets/images/Снимок экрана 2023-06-23 223701.png">
   </head>
   <body>
     <div id="app"></div>
