changed HTML file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     rel="Icon" 
     type="image/png"
     href="/src/assets/images/Снимок экрана 2023-06-23 223701.png">
+    <link rel="stylesheet" href="./src">
   </head>
   <body>
     <div id="app"></div>
